--- a/code/style/style.css
+++ b/code/style/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 
 * {
 
@@ -9,28 +9,31 @@
 
 :root{
 
-    --universal-font: 'Roboto', sans-serif;
+    --universal-font: 'Josefin Sans', sans-serif;
 }
 
 .todoContainer{
 
     font-family: var(--universal-font);
     background-image: url(/images/bg-desktop-light.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
+    height: 300px;
     
 }
 
 .todo {
     display: flex;
     justify-content: space-between;
-    width: 50%;
+    width: 60%;
     margin-left: auto;
     margin-right: auto;
 }
 
 .todo h1{
     color: #fff;
-    font-weight: bolder;
+    font-weight: 700;
 }
 
 .todo img{
