--- a/code/style/style.css
+++ b/code/style/style.css
@@ -15,7 +15,7 @@
 .todoContainer{
 
     font-family: var(--universal-font);
-    background-image: url(/images/bg-desktop-light.jpg);
+    background-image: url("../images/bg-desktop-light.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
