--- a/code/style/style.css
+++ b/code/style/style.css
@@ -78,6 +78,7 @@ body {
     border: hidden 1px #fff;
     border-radius: 4px;
     padding-left: 3%;
+    margin-bottom: 2%;
    
 }
 
@@ -85,7 +86,7 @@ body {
     height: 35px;
     width:120px;
     border: hidden 1px #fff;
-    border-radius: 4px;
+    border-radius: 2px;
     background-color: var(--tasks-container-color);
     cursor: pointer;
     background-color: var(--insert-button);
@@ -101,13 +102,23 @@ body {
 
 /* tasks */
 
+#taskContainer{
+
+    width: 80%;
+    margin-top: 10%;
+    
+}
+
 .task {
 
-    width:  30%;
+    width:  35%;
     height: 35px;
     background-color: var(--tasks-container-color);
     border: hidden 1px #fff;
-    border-radius: 4px;
+    border-radius: 2px;
     padding-left: 3%;
+    margin-left: 30.4%;
+    border-bottom: solid 1px black;
+    padding-top: 10px;
 
 }
