--- a/code/style/style.css
+++ b/code/style/style.css
@@ -112,13 +112,25 @@ body {
 .task {
 
     width:  35%;
-    height: 35px;
+    height: 50px;
     background-color: var(--tasks-container-color);
     border: hidden 1px #fff;
-    border-radius: 2px;
-    padding-left: 3%;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    padding-left: 5%;
     margin-left: 30.4%;
-    border-bottom: solid 1px black;
+    border-bottom: solid 1px gray;
     padding-top: 10px;
+    border-bottom-left-radius: 2px;
 
 }
+
+/* checkBox */
+
+input[type="checkbox"] {
+
+    margin-right: 5%;
+    border: solid 1px black;
+
+}
+  
