--- a/code/style/style.css
+++ b/code/style/style.css
@@ -118,7 +118,7 @@ body {
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     padding-left: 5%;
-    margin-left: 30.4%;
+    margin-left: 32.4%;
     border-bottom: solid 1px gray;
     padding-top: 10px;
     border-bottom-left-radius: 2px;
@@ -133,5 +133,18 @@ input[type="checkbox"] {
     accent-color: blue
 
 
+}
+
+
+/* commands container */
+.commandContainer {
+
+    width: 35%;
+    background-color: var(--tasks-container-color);
+    margin-left: 32.4%;
+    display:flex;
+    justify-content: space-evenly;
+    height: 35px;
+    padding-top: 1%;
 }
   
